--- a/dice_app/pubspec.yaml
+++ b/dice_app/pubspec.yaml
@@ -30,14 +30,14 @@ flutter:
   assets:
     - images/
 
-  fonts:
-    - family: Schyler
-      fonts:
-        - asset: fonts/Schyler-Regular.ttf
-          style: italic
-    - family: Trajan Pro
-      fonts:
-        - asset: fonts/TrajanPro.ttf
-          weight: 700
+#  fonts:
+#    - family: Schyler
+#      fonts:
+#        - asset: fonts/Schyler-Regular.ttf
+#          style: italic
+#    - family: Trajan Pro
+#      fonts:
+#        - asset: fonts/TrajanPro.ttf
+#          weight: 700
 
 
